<resources>
    <string name="app_name">task-app-droid-mediumcom</string>
    <string name="created_on_text">"Created on: %s"</string>
    <string name="reminder_text">Reminder: %s</string>
    <string name="priority_text">Priority: %s</string>
    <string name="zero_tasks_found">zero tasks found</string>
    <string name="retry_btn_text">Retry</string>
    <string name="add_icon_description">Add a new task</string>
    <string name="skeleton_shimmer">skeleton shimmer</string>
    <string name="delete_task_headline">Are you sure you want to delete the task?</string>
    <string name="delete_task">Delete</string>
    <string name="cancel_delete_task">Cancel</string>
    <string name="pressed_cancel_delete">Pressed cancel</string>
    <string name="no_tasks_found">No, tasks found</string>
    <string name="task_request_success_message">Request success</string>
    <string name="task_request_failure_message">Request failure</string>
    <string name="closed_tasks">Closed Tasks</string>
    <string name="open_tasks">Open Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="create_task_description">Description:</string>
    <string name="create_task_time_interval">Time Interval:</string>
    <string name="create_task_time_taken">Time Taken:</string>
    <string name="create_task_select_priority">Please select your priority:</string>
    <string name="create_task_priority_low">LOW</string>
    <string name="create_task_priority_medium">MEDIUM</string>
    <string name="create_task_priority_high">HIGH</string>
    <string name="create_task_set_reminder">Set reminder</string>
    <string name="create_task_text">Create task</string>
    <string name="edit_task_save_task">save task</string>
    <string name="edit_task_time_taken">Time taken</string>
    <string name="edit_task_is_task_open">Task open:</string>
    <string name="task_detail_id">id: %s</string>
    <string name="task_detail_description">description: %s</string>
    <string name="task_detail_reminder_set">reminder set: %s</string>
    <string name="task_detail_is_open">task open: %s</string>
    <string name="task_detail_created_on">created on: %s</string>
    <string name="task_detail_started_on">started on: %s</string>
    <string name="task_detail_finished_on">finished on: %s</string>
    <string name="task_detail_time_interval">time interval: %s</string>
    <string name="task_detail_time_taken">time taken: %s</string>
    <string name="task_detail_priority">priority: %s</string>
    <string name="task_detail_edit_task">Edit Task</string>
    <string name="task_detail_delete_task">Delete Task</string>
    <string name="task_detail_error_text">Couldn\'t fetch tasks</string>
    <string name="task_detail">Task Detail</string>
    <string name="create_task">Create Task</string>
    <string name="enter_description">Please, enter a description</string>
</resources>